[tool.poetry]
name = "btestlab-recordservice"
version = "0.0.0"
description = "Sybsystem of btestlab application that provides REST API to record performed blood examinations."
authors = ["a1black"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
